another time nothing is added

--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@
         <div id="introduce-section">
             <div class="introduce-section-child-1">
                 <h3 style="margin: 0; color: #37403d;">Hello!</h3>
-                <h3 class="hi-nur-islam"> This is me <span class="Nur">Nur Islam.</span></h3>
-                <h1 class="introduce-names">I am a Professional
-                    <span class="name-animation">Web Developer..</span>
-                </h1>
+                <h3 class="introduce-names">This is me <span class="name-animation">NUR ISLAM...</span></h3>
+                <h3 class="hi-nur-islam">A Professional <span class="Nur">Web Developer.</span></h3>
+                
                 <p style="text-align: justify; color: #37403d; font-size: 20px;">Lorem ipsum dolor sit amet consectetur
                     adipisicing elit. Nostrum pariatur enim fuga praesentium
                     commodi quae odio eligendi. Esse animi error consectetur soluta quaerat. Eum fuga suscipit tempora
@@ -47,7 +46,8 @@
                     esse quis vel quidem. Distinctio consequuntur vitae iusto, debitis similique mollitia blanditiis
                     cupiditate veritatis.</p>
                 <button class="custom-button"><a
-                        href="https://drive.google.com/file/d/1b5N_Ewk_vkaHXwAc7ixSMfuJAWEUkQNk/view?usp=sharing" target="_blank">
+                        href="https://drive.google.com/file/d/1b5N_Ewk_vkaHXwAc7ixSMfuJAWEUkQNk/view?usp=sharing"
+                        target="_blank">
                         Download CV <i class="fa-solid fa-download" style="color: #FFD43B;"></i></a>
                 </button>
             </div>
@@ -66,7 +66,7 @@
         <!-- Happy Client Experience -->
         <div id="clients-happy-experience">
             <div>
-                <h2 class="num" data-value="5">00+<span>+</span></h2>
+                <h2 class="num" data-value="5">00+</h2>
                 <p>Years <br> of Experience</p>
             </div>
             <div>
@@ -342,7 +342,7 @@
                     <label>Massage Drop Date</label>
                     <input type="datetime-local">
                     <label>What For Massage?</label>
-                    <textarea cols="50" rows="10" placeholder="say the reason" required>Actually,</textarea>
+                    <textarea cols="40" rows="10" placeholder="say the reason" required>Actually,</textarea>
                     <div id="submit-button"><button type="submit">Submit</button></div>
 
                 </form>
