logo ancor link add

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- header section  -->
     <header>
         <nav>
-            <div class="navber-logo"><img src="images/main-logo-PNG.png" alt=""></div>
+            <div class="navber-logo"><a href="index.html"><img src="images/main-logo-PNG.png" alt=""></a></div>
             <div class="nav-child-2">
                 <h3 class="skill-title"><a href="index.html">Home</a></h3>
                 <h3><a href="services.html">Services</a></h3>
