naber anchor tag added

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <div class="navber-logo"><a href="index.html"><img src="images/main-logo-PNG.png" alt=""></a></div>
             <div class="nav-child-2">
                 <h3 class="skill-title"><a href="index.html">Home</a></h3>
-                <h3><a href="services.html">Services</a></h3>
-                <h3><a href="resume.html">Portfolio</a></h3>
-                <h3><a href="contact.html">Contact</a></h3>
+                <h3 class="skill-title"><a href="services.html">Services</a></h3>
+                <h3 class="skill-title"><a href="resume.html">Portfolio</a></h3>
+                <h3 class="skill-title"><a href="contact.html">Contact</a></h3>
                 <div id="submit-button"><button><a href="#">Hire Me</a></button></div>
                 <!-- <button class="custom-button"><a href="#"></a></button> -->
             </div>
@@ -157,7 +157,7 @@
         <div id="Education-Experience">
             <div>
                 <h1 class="my-education-experience">My Education</h1>
-                <div>
+                <div class="eduction-experience-horizontal">
                     <button class="button-education-experience">2018-2022</button>
                     <h2 class="education-expericence-title">Bachelor of Computer Science</h2>
                     <h4 class="education-experience-tag">Dhaka University of Enginerring and Technology</h4>
@@ -165,7 +165,7 @@
                         elit. Ducimus ipsam repellendus laudantium magnam cupiditate molestias unde quo asperiores
                         necessitatibus, praesentium, veniam quasi harum dicta ab eligendi nulla eos impedit nam?</p>
                 </div>
-                <div>
+                <div class="eduction-experience-horizontal">
                     <button class="button-education-experience">2014-2018</button>
                     <h2 class="education-expericence-title">Diploma in Computer Science</h2>
                     <h4 class="education-experience-tag">Pabna Polytechnic Institute</h4>
@@ -173,7 +173,7 @@
                         elit. Neque error rerum illo ad dignissimos eveniet provident repellendus illum rem, odit quidem
                         sed, itaque est aliquid alias a! Et, nesciunt porro!</p>
                 </div>
-                <div>
+                <div class="eduction-experience-horizontal">
                     <button class="button-education-experience">2012-2014</button>
                     <h2 class="education-expericence-title">Secondary School Certificate</h2>
                     <h4 class="education-experience-tag">Holy International High School</h4>
@@ -184,7 +184,7 @@
             </div>
             <div>
                 <h1 class="my-education-experience">My Experience</h1>
-                <div>
+                <div class="eduction-experience-horizontal">
                     <button class="button-education-experience">2022-Present</button>
                     <h2 class="education-expericence-title">Skill Grouth Computer Training Institute</h2>
                     <h4 class="education-experience-tag">Sinior Web Designer</h4>
@@ -193,7 +193,7 @@
                         nesciunt expedita natus veniam doloribus dignissimos voluptatibus, aliquid numquam consequatur
                         unde nostrum!</p>
                 </div>
-                <div>
+                <div class="eduction-experience-horizontal">
                     <button class="button-education-experience">2021-2023</button>
                     <h2 class="education-expericence-title">Galaxy Computer Training Center</h2>
                     <h4 class="education-experience-tag">Junior Web Designer</h4>
@@ -201,7 +201,7 @@
                         elit. Consequatur tenetur, assumenda, deserunt optio accusantium ratione harum excepturi dolores
                         placeat at perferendis corrupti voluptas, molestiae velit. Maiores ex culpa aperiam non.</p>
                 </div>
-                <div>
+                <div class="eduction-experience-horizontal">
                     <button class="button-education-experience">2020-2021</button>
                     <h2 class="education-expericence-title">Rainbow International High School</h2>
                     <h4 class="education-experience-tag">Physics & English Teacher</h4>
