nothing is added

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -159,7 +158,7 @@
                 <h1 class="my-education-experience">My Education</h1>
                 <div class="eduction-experience-horizontal">
                     <button class="button-education-experience">2018-2022</button>
-                    <h2 class="education-expericence-title">Bachelor of Computer Science</h2>
+                    <h2 class="education-expericence-title">Bachalor of Computer Science</h2>
                     <h4 class="education-experience-tag">Dhaka University of Enginerring and Technology</h4>
                     <p class="education-experience-information">Lorem, ipsum dolor sit amet consectetur adipisicing
                         elit. Ducimus ipsam repellendus laudantium magnam cupiditate molestias unde quo asperiores
