button submit gradient cronic color added

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <!-- Happy Client Experience -->
         <div id="clients-happy-experience">
             <div>
-                <h2 class="num" data-value="5">00+</h2>
+                <h2 class="num" data-value="5">00</h2>
                 <p>Years <br> of Experience</p>
             </div>
             <div>
@@ -73,7 +73,7 @@
                 <p>Project <br> Completed</p>
             </div>
             <div>
-                <h2 class="num" data-value="1100">00<span>K</span></h2>
+                <h2 class="num" data-value="1100">00</h2>
                 <p>Happy <br> Client Says</p>
             </div>
             <div>
